@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2015/05/07 10:41:35 wiz Exp $
+# $NetBSD: Makefile,v 1.1 2015/05/07 12:26:12 wiz Exp $
 
 DISTNAME=	Attic-0.15
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/A/a/}
