@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2015,v 1.2158 2015/05/07 06:31:14 wiz Exp $
+$NetBSD: CHANGES-2015,v 1.2159 2015/05/07 12:26:12 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2015:
 
@@ -3464,3 +3464,4 @@ Changes to the packages collection and infrastructure in 2015:
 	Updated sysutils/coreutils to 8.23 [mef 2015-05-07]
 	Updated misc/gnuls to 8.23 [mef 2015-05-07]
 	Updated x11/libdrm to 2.4.61 [wiz 2015-05-07]
+	Moved devel/py-attic to sysutils/py-attic [wiz 2015-05-07]
